Retail Lending-Production/src/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>BHK__c</fullName>
        <inlineHelpText>No of Bedrooms</inlineHelpText>
        <label>BHK</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1+Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3+Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5++</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Block_Tower__c</fullName>
        <label>Block/Tower</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>ENTER THE NAME OF THE PERSON CREATING THIS DATA</description>
        <label>CREATED BY</label>
        <picklist>
            <picklistValues>
                <fullName>ANSARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BABU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHUMITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAIKAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEETY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Central_HVAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Central HVAC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Purchase_Option_Expires__c</fullName>
        <label>Date Purchase Option Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Renewal_Expires__c</fullName>
        <label>Date Renewal Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Projects__c</fullName>
        <description>To eliminate Duplicate units records</description>
        <label>Duplicate Projects</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Existing_TI__c</fullName>
        <label>Existing TI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expenses_Stop__c</fullName>
        <label>Expenses Stop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frontage_Comments__c</fullName>
        <label>Frontage Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Estimate__c</fullName>
        <label>Insurance Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Targets_Last_Updated__c</fullName>
        <label>Lease Targets Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Verified By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units (Lease Verified By)</relationshipLabel>
        <relationshipName>Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Load_Factor__c</fullName>
        <label>Load Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Available_Date__c</fullName>
        <label>Next Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupancy_Status_Space__c</fullName>
        <label>Occupancy Status (Space)</label>
        <picklist>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Expiring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option_Price__c</fullName>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_to_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option to Purchase?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking_Spaces__c</fullName>
        <label># Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Types_Available__c</fullName>
        <label>Parking Types Available</label>
        <picklist>
            <picklistValues>
                <fullName>Free/Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Rent__c</fullName>
        <label>Percentage Rent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Use__c</fullName>
        <label>Primary Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Tower Name</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Name_f__c</fullName>
        <formula>Project_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tower_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <description>This is the property purchase price paid by the buyer</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Rate_SqFt__c</fullName>
        <label>Renewal Rate $/SqFt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Mos__c</fullName>
        <label>Renewal Term (Mos)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Breakpoint__c</fullName>
        <label>% Rent Breakpoint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Space_Address__c</fullName>
        <label>Space Address</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Space_Listing_Date__c</fullName>
        <label>Space Listing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SqFt_of_Space__c</fullName>
        <label>SqFt of Space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suite_Unit__c</fullName>
        <label>Suite/Unit #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_CAM_SqFt__c</fullName>
        <label>Target CAM $/SqFt</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Rent_Month__c</fullName>
        <formula>(Target_CAM_SqFt__c * Target_TI_SqFt__c )/12</formula>
        <label>Target Rent $/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_TI_SqFt__c</fullName>
        <label>Target TI $/SqFt</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxes_Estimate__c</fullName>
        <label>Taxes Estimate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Dimension__c</fullName>
        <label>Unit Dimension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usable_SqFt__c</fullName>
        <label>Usable SqFt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Renewals__c</fullName>
        <label># of Renewals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>property__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Unit_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit Number</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Campaign_00N90000003gjG4EAI</fullName>
        <active>true</active>
        <field>Campaign.Unit_of_Project__c</field>
        <filterItems>
            <field>$Source.Campaign_for_Project__c</field>
            <operation>equals</operation>
            <valueField>Unit__c.Project_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Campaign_Unit of Project</name>
        <sourceObject>Campaign</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Campaign_00N90000003gjGJEAY</fullName>
        <active>true</active>
        <field>Campaign.Property_Unit__c</field>
        <filterItems>
            <field>$Source.Campaign_for_Property__c</field>
            <operation>equals</operation>
            <valueField>Unit__c.property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Campaign_Property Unit</name>
        <sourceObject>Campaign</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000lLvaEAE_00N90000003iQV3EAM</fullName>
        <active>true</active>
        <field>loans__c.Unit__c</field>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Unit__c.Project_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Loan_Unit</name>
        <sourceObject>loans__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000GqjMAE_00NO0000000HDheMAG</fullName>
        <active>true</active>
        <field>Property__c.Unit__c</field>
        <filterItems>
            <field>Unit__c.Project_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.ProjectName__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Property_Unit</name>
        <sourceObject>Property__c</sourceObject>
    </namedFilters>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>